// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for goals-and-life-events 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 104469.9911507141,
  "annualSavings": [
    20530.6926322143,
    -11320.912793702526,
    38129.508431456634,
    41974.027401639716,
    58152.68650294547,
    42149.28987430309,
    62211.64226045968,
    64341.872657092485,
    59231.76021927758,
    61289.55134474485,
    63352.98432659319,
    26013.473371017877,
    27120.053978576732,
    -57625.01901405537,
    25249.54221009573,
    66280.95421152381,
    64851.345426662716,
    63347.48766998613,
    60371.25818716155,
    60316.814704842865,
    58605.431934623244,
    59831.89493910252,
  ],
  "currentAge": 37,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 210000,
  "lifeExpectancy": 93,
  "portfolioAdjustments": [
    {
      "amount": 49612.5,
      "year": 2,
    },
    {
      "amount": -25000,
      "year": 24,
    },
  ],
  "postRetirementIncome": [
    0,
    0,
    0,
    0,
    0,
    0,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
  ],
  "retirementAge": 58,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for pr-residency-transition 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 89605.91809374497,
  "annualSavings": [
    52374.5,
    46815.318181818184,
    42960.235454545444,
    44012.63597727276,
    49487.73420985003,
    50288.84645480867,
    50980.369523513335,
    51671.648580399204,
    60861.06889579666,
    65687.56089097756,
    66435.9503071165,
  ],
  "currentAge": 57,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 557000,
  "lifeExpectancy": 92,
  "portfolioAdjustments": [],
  "postRetirementIncome": [
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    -5901.209759694166,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
  ],
  "retirementAge": 67,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for property-and-CPF 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 117980.38370090838,
  "annualSavings": [
    98346,
    102849.75,
    111524.21124999996,
    116375.68564374998,
    121410.70381628122,
    133076.4306141974,
    138408.11884238955,
    143941.28286248588,
    149682.36849717426,
    155590.7035409836,
    161721.87667748638,
    168084.08839908108,
    174672.99256990585,
    181465.49860905466,
    188513.49489205354,
    188826.36739074969,
    197883.83552211444,
    205492.38236007636,
    213387.00195223413,
    221488.05997314997,
    230300.87665156962,
  ],
  "currentAge": 40,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 742000,
  "lifeExpectancy": 95,
  "portfolioAdjustments": [
    {
      "amount": 1067800,
      "year": 25,
    },
  ],
  "postRetirementIncome": [
    54709.9644311437,
    55717.71354192228,
    133953.43257606612,
    135012.19898557788,
    120370.34402203496,
    121482.71048102828,
    122622.88610149638,
    123791.5661124762,
    124989.46312373053,
    126217.3075602662,
    127475.84810771528,
    128765.85216885057,
    52885.33013591842,
    54240.640652648675,
    55629.83393229721,
    57053.75704393694,
    58513.27823336768,
    60009.28745253418,
    61542.69690217982,
    63114.44158806663,
    64725.4798911006,
    66376.79415171043,
    68069.39126883549,
    69804.3033138887,
    71582.58816006823,
    73405.33012740224,
    75273.64064391959,
    77188.6589233499,
    79151.55265976593,
    81163.5187395924,
    83225.7839714145,
    85339.60583403218,
    87506.27324321528,
    89727.10733762797,
    -1327.0905332924885,
  ],
  "retirementAge": 60,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for salary-only 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 91838.77086283134,
  "annualSavings": [
    45008,
    48111.20000000002,
    51208.94600000002,
    54378.39509000002,
    57692.74542485006,
    61158.2461363753,
    64781.407648724846,
    68569.0124132407,
    72528.12607980147,
    76584.48968623538,
    80681.18472294867,
    84963.29044736213,
    89438.76185913953,
    94115.88562223503,
    99003.29366807266,
    103944.74112737871,
    109032.97650735761,
    114349.7244459077,
    119904.75002395624,
    125703.39364891253,
    131669.558022967,
    137901.94568768603,
    144411.89499258884,
    152161.2150566227,
    160866.0494822297,
    168222.90436673092,
    175905.23396924243,
    183895.31158885895,
    192604.62606504007,
  ],
  "currentAge": 32,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 125000,
  "lifeExpectancy": 92,
  "portfolioAdjustments": [],
  "postRetirementIncome": [
    0,
    0,
    0,
    0,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
  ],
  "retirementAge": 60,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;
